# django-webpack-test

./: .env.example  .gitignore  Procfile  README.md  manage.py  package.json  pyproject.toml  webpack.config.js
django_webpack_test/: asgi.py  settings.py  urls.py  wsgi.py
my_app/: admin.py  apps.py  models.py  views.py
my_app/migrations/: 0001_initial.py
my_app/static/my_app/components/: Home.vue
my_app/templates/my_app/: home.html
static/: package.json  webpack.config.js
static/js/: app.js
templates/: base.html
