[tool.poetry]
name = "django_webpack_test"
version = "0.1.0"
description = ""
authors = ["Cristian Rasch <cristianrasch@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
honcho = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
